[gd_scene load_steps=8 format=2]

[ext_resource path="res://ui/NinePatchPanel.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/StarScroll.tscn" type="PackedScene" id=2]
[ext_resource path="res://ui/Credits.gd" type="Script" id=4]
[ext_resource path="res://assets/Alexandr_Zhelanov_cc_by/ambient_menu.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/Eamonn/logo2.png" type="Texture" id=6]
[ext_resource path="res://assets/brandon75689_cc0/ambientmain_0.ogg" type="AudioStream" id=7]
[ext_resource path="res://ui/MainMenu.gd" type="Script" id=8]

[node name="MainMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuBackdrop" parent="." instance=ExtResource( 2 )]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -197.0
margin_top = -126.0
margin_right = 197.0
margin_bottom = 126.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo" type="TextureRect" parent="VBoxContainer"]
margin_right = 394.0
margin_bottom = 152.0
texture = ExtResource( 6 )

[node name="Control" type="Control" parent="VBoxContainer"]
margin_top = 156.0
margin_right = 394.0
margin_bottom = 156.0

[node name="NinePatchPanel" parent="VBoxContainer/Control" instance=ExtResource( 1 )]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -72.0
margin_right = 73.0
margin_bottom = 113.0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/Control/NinePatchPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 12.0
margin_top = 8.0
margin_right = -11.0
margin_bottom = -14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Control/NinePatchPanel/MarginContainer"]
margin_right = 122.0
margin_bottom = 92.0

[node name="NewGame" type="Button" parent="VBoxContainer/Control/NinePatchPanel/MarginContainer/VBoxContainer"]
margin_right = 122.0
margin_bottom = 20.0
text = "New Game"

[node name="LoadGame" type="Button" parent="VBoxContainer/Control/NinePatchPanel/MarginContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 122.0
margin_bottom = 44.0
text = "Load Game"

[node name="Credits" type="Button" parent="VBoxContainer/Control/NinePatchPanel/MarginContainer/VBoxContainer"]
margin_top = 48.0
margin_right = 122.0
margin_bottom = 68.0
text = "Credits"

[node name="Quit" type="Button" parent="VBoxContainer/Control/NinePatchPanel/MarginContainer/VBoxContainer"]
margin_top = 72.0
margin_right = 122.0
margin_bottom = 92.0
text = "Quit"

[node name="Credits" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credits" parent="Credits" instance=ExtResource( 1 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 172.0
margin_top = 95.0
margin_right = 729.0
margin_bottom = 511.0

[node name="MarginContainer" type="MarginContainer" parent="Credits/Credits"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 15.0
margin_top = 11.0
margin_right = -14.0
margin_bottom = -16.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Credits/Credits/MarginContainer"]
margin_right = 528.0
margin_bottom = 389.0

[node name="Label" type="Label" parent="Credits/Credits/MarginContainer/VBoxContainer"]
margin_right = 528.0
margin_bottom = 14.0
text = "README.txt"

[node name="ScrollContainer" type="ScrollContainer" parent="Credits/Credits/MarginContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 528.0
margin_bottom = 365.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="RichTextLabel" type="Label" parent="Credits/Credits/MarginContainer/VBoxContainer/ScrollContainer"]
margin_top = 166.0
margin_right = 528.0
margin_bottom = 180.0
size_flags_horizontal = 3
size_flags_vertical = 6

[node name="CloseButton" type="Button" parent="Credits/Credits/MarginContainer/VBoxContainer"]
margin_top = 369.0
margin_right = 528.0
margin_bottom = 389.0
text = "close"

[node name="MenuSoundtrack" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
autoplay = true

[node name="MenuSoundtrack2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
[connection signal="pressed" from="VBoxContainer/Control/NinePatchPanel/MarginContainer/VBoxContainer/NewGame" to="." method="_on_NewGame_pressed"]
[connection signal="pressed" from="VBoxContainer/Control/NinePatchPanel/MarginContainer/VBoxContainer/LoadGame" to="." method="_on_LoadGame_pressed"]
[connection signal="pressed" from="VBoxContainer/Control/NinePatchPanel/MarginContainer/VBoxContainer/Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="VBoxContainer/Control/NinePatchPanel/MarginContainer/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="Credits/Credits/MarginContainer/VBoxContainer/CloseButton" to="Credits" method="_on_CloseButton_pressed"]
